# ecommerce-seo-audit-skill

./: .gitignore  .npmignore  MANIFEST.in  NPM_PUBLISH_GUIDE.md  PUBLISH_INSTRUCTIONS.md  README.md  SKILL.md  SUBMISSION_GUIDE.md  __init__.py  package.json  pyproject.toml  setup.py
.claude-plugin/: marketplace.json
ecommerce-seo-audit/: README.md
